# CS-4262-Doodling-Project

./: .gitignore  4262 Downloading Script.ipynb  CNN_COLAB_RUNBOOK.md  INITIAL_BASELINE_RESULTS.md  README.md  cnn_colab_runner.ipynb  cnn_model.py  download_data.py  pyproject.toml  train_baseline.py  train_cnn.py
docs/: CNN_COLAB_RUNBOOK.md  FEATURE_ENGINEERING.md  INITIAL_BASELINE_RESULTS.md
notebooks/: cnn_colab_runner.ipynb  quickdraw_data_download.ipynb
scripts/: build_stroke_features.py  cnn_model.py  download_quickdraw_data.py  extract_features.py  sketch_cnn_models.py  train_baseline.py  train_classical_models.py  train_cnn.py  train_sketch_cnn.py
