[project]
name = "cs-4262-doodling-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.6.0",
]
